2015-03-19  Eric Abrahamsen  <eric@ericabrahamsen.net>

	* registry.el (registry-prune): Allow registry to reach full size
	before pruning.

2015-03-19  Eric Abrahamsen  <eric@ericabrahamsen.net>

	* registry.el (registry-collect-prune-candidates): Fix call to
	cl-subseq.

2015-03-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* registry.el (registry-db): Temporary fix old Emacsen compilation.

2015-03-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-registry.el (gnus-registry-handle-action)
	(gnus-registry-post-process-groups): Don't add-to-list on a local var.
	(gnus-registry-keywords): Make it do something.
	(gnus-registry-import-eld): Remove unused var `new-entry'.
	(gnus-registry-action): Remove unused var `to-name'.
	(gnus-registry-make-db): Prefer `make-instance' to avoid
	compiler warnings.
	(gnus-registry-load, gnus-registry-fixup-registry): Avoid `oset'.

	* registry.el (registry-db): Don't oset-default an instance-allocated
	slot.

2015-03-10  Glenn Morris  <rgm@gnu.org>

	* message.el (message-valid-fqdn-regexp): Bump :version for
	2014-11-17 change.

2015-03-07  Rasmus Pank Roulund  <rasmus@pank.eu>

	* gnus-notifications.el (gnus-notifications-action): Raise window
	frame.
	(gnus-notifications-action): Allow mark as read.
	(gnus-notifications-notify): Show uption to mark as read.

2015-03-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* registry.el (registry-lookup-breaks-before-lexbind, registry-lookup)
	(registry-search, registry-delete, registry-size, registry-insert)
	(registry-reindex, registry-collect-prune-candidates):
	* gnus-registry.el (gnus-registry-fixup-registry)
	(gnus-registry-remove-extra-data): Use slot names rather than initarg
	names in `oref' and `oset'.

2015-02-25  Adam Sjøgren  <asjo@koldfront.dk>

	* message.el (message-insert-formatted-citation-line): Change %F to
	fall back to email address if no first name could be determined.

2015-02-26  Katsumi Yamaoka  <yamaoka@jpl.org>
