@@ -205,8 +205,8 @@ When CREATE is not nil, create the secondary index hashtable if needed."
       (when create
 	(puthash tracksym
 		 (make-hash-table :size 800 :rehash-size 2.0 :test 'equal)
-		 (oref db :tracker))
-	(gethash tracksym (oref db :tracker))))))
+		 (oref db tracker))
+	(gethash tracksym (oref db tracker))))))
 
 (defmethod registry-lookup-secondary-value ((db registry-db) tracksym val
 					    &optional set)
@@ -302,7 +302,7 @@ This is the key count of the `data' slot."
 (defmethod registry-full ((db registry-db))
   "Checks if registry-db THIS is full."
   (>= (registry-size db)
-      (oref db :max-size)))
+      (oref db max-size)))
 
 (defmethod registry-insert ((db registry-db) key entry)
   "Insert ENTRY under KEY into the registry-db THIS.
@@ -361,11 +361,11 @@ from the front of the list are deleted first.
 
 Returns the number of deleted entries."
   (let ((size (registry-size db))
-	(target-size (- (oref db :max-size)
-			(* (oref db :max-size)
-			   (oref db :prune-factor))))
+	(target-size (- (oref db max-size)
+			(* (oref db max-size)
+			   (oref db prune-factor))))
 	candidates)
-    (if (> size (oref db :max-size))
+    (if (> size (oref db max-size))
 	(progn
 	  (setq candidates
 		(registry-collect-prune-candidates
@@ -379,7 +379,7 @@ Returns the number of deleted entries."
 Proposes only entries without the :precious keys, and attempts to
 return LIMIT such candidates.  If SORTFUNC is provided, sort
 entries first and return candidates from beginning of list."
-  (let* ((precious (oref db :precious))
+  (let* ((precious (oref db precious))
 	 (precious-p (lambda (entry-key)
 		       (cdr (memq (car entry-key) precious))))
 	 (data (oref db data))
