@@ -1,3 +1,10 @@
+2015-03-21  Eric Abrahamsen  <eric@ericabrahamsen.net>
+
+	* registry.el (registry-lookup-secondary, registry-full)
+	(registry-prune, registry-collect-prune-candidates):
+	* gnus-registry.el (gnus-registry-load): Use slot names rather than
+	initarg names in `oref' and `oset'.
+
 2015-03-19  Eric Abrahamsen  <eric@ericabrahamsen.net>
 
 	* registry.el (registry-prune): Allow registry to reach full size
